tests/fail/elaboration/mismatched-array-length/array16.snap
stdout = ''
stderr = '''
error: mismatched array length
  ┌─ tests/fail/elaboration/mismatched-array-length/array16.fathom:3:1
  │
3 │ [34] : Array16 0 U32
  │ ^^^^ array with invalid length
  │
  = expected length 0
  =    found length 1

'''
